# RecoServiceMTS

./: .gitattributes  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml
.dvc/: config
.github/workflows/: cicd.yml
data/: UserKnnTfIdf.csv
notebook/: practice-2-1-validation.ipynb  practice-2-2-metrics.ipynb  practice_2_2_metrics.ipynb
notebooks/: ALS_LightFM_MF.ipynb  KNN_RecSys.ipynb  KNN_RecSysv2.ipynb  knn.ipynb  knnfinal.ipynb  online_LightFm.ipynb  popular.ipynb  practice-2-1-validation.ipynb  practice-2-2-metrics.ipynb  Домашнее задание №4.ipynb
service/api/: exceptions.py  models.py  models_zoo.py  views.py
tests/api/: test_model_zoo.py  test_views.py
