[tool.poetry]
name = "reco_service"
version = "0.0.2"
description = ""
authors = [
    "Shakirov Renat <renatshk@gmail.com>",
    "Mostovik Vladislav <mostovik71@gmail.com>",
    "Zaraev Robert <robert.zaraev@mail.ru>"
]
maintainers = [
    "Shakirov Renat <renatshk@gmail.com>",
    "Mostovik Vladislav <mostovik71@gmail.com>",
    "Zaraev Robert <robert.zaraev@mail.ru>"
]
readme = "README.md"
packages = [
    { include = "service" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"
uvloop = "^0.15.2"
uvicorn = "^0.14.0"
orjson = "^3.7.7"
starlette = "^0.14.2"
pandas = "^1.5.2"
dill = "^0.3.6"
implicit = "^0.6.1"
joblib = "^1.2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "2.25.1"
mypy = "^0.812"
isort = "^5.8.0"
bandit = "^1.7.0"
flake8 = "^3.9.2"
pylint = "~2.8.3"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
